RESOLVED FIXED144509
Crash in SandboxExtension::consume when uploading iWork -tef documents to iCloud
https://bugs.webkit.org/show_bug.cgi?id=144509
Summary Crash in SandboxExtension::consume when uploading iWork -tef documents to iCloud
Alexey Proskuryakov
Reported 2015-05-01 16:45:27 PDT
Shouldn't crash, but making it work is a different story. rdar://problem/18731910
Attachments
proposed fix (1.65 KB, patch)
2015-05-01 16:50 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2015-05-01 16:46:05 PDT
The same crash can occur if the user deletes a file after a Blob is created.
Alexey Proskuryakov
Comment 2 2015-05-01 16:50:41 PDT
Created attachment 252197 [details] proposed fix
Daniel Bates
Comment 3 2015-05-03 21:29:15 PDT
Comment on attachment 252197 [details] proposed fix r=me
WebKit Commit Bot
Comment 4 2015-05-03 22:17:20 PDT
Comment on attachment 252197 [details] proposed fix Clearing flags on attachment: 252197 Committed r183736: <http://trac.webkit.org/changeset/183736>
WebKit Commit Bot
Comment 5 2015-05-03 22:17:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.