Crash in SandboxExtension::consume when uploading iWork -tef documents to iCloud https://bugs.webkit.org/show_bug.cgi?id=144509 rdar://problem/18731910

Reviewed by Daniel Bates.

No test, because testRunner.beginDragWithFiles doesn't work in WKTR, and making
it work is hard.

* Shared/BlobDataFileReferenceWithSandboxExtension.cpp:
(WebKit::BlobDataFileReferenceWithSandboxExtension::prepareForFileAccess):
(WebKit::BlobDataFileReferenceWithSandboxExtension::revokeFileAccess):


Canonical link: https://commits.webkit.org/162571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183736 268f45cc-cd09-0410-ab3c-d52691b4dbfc